Added lesson info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>FWD Lesson</title>
 </head>
 <body>
+  <form action="" id="test">
+    <input type="date" name="" id="">
+    <button type="submit"></button>
+  </form>
   
   <script src="/js/script.js"></script>
 </body>
